Created MTR and MTA Maven plugins