@@ -9,11 +9,11 @@
     </parent>
 
     <groupId>org.jboss.windup.plugin</groupId>
-    <artifactId>windup-maven-plugin</artifactId>
+    <artifactId>windup-maven-plugin-parent</artifactId>
     <version>6.0.1-SNAPSHOT</version>
-    <packaging>maven-plugin</packaging>
+    <packaging>pom</packaging>
 
-    <name>Windup Maven Plugin</name>
+    <name>Windup Maven Plugin - Parent</name>
 
     <url>http://windup.jboss.org</url>
 
@@ -68,7 +68,7 @@
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
     </distributionManagement>
-    
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.target>11</maven.compiler.target>
@@ -91,220 +91,36 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-            <dependency>
-                <groupId>org.jboss.windup.rules</groupId>
-                <artifactId>windup-rulesets-parent</artifactId>
-                <version>${version.windup-rulesets}</version>
-            </dependency>
         </dependencies>
     </dependencyManagement>
 
-    <dependencies>
-
-        <!-- Maven plugin API -->
-        <dependency>
-            <groupId>org.apache.maven</groupId>
-            <artifactId>maven-plugin-api</artifactId>
-            <version>3.8.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.maven</groupId>
-            <artifactId>maven-artifact</artifactId>
-            <version>3.8.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.maven.plugin-tools</groupId>
-            <artifactId>maven-plugin-annotations</artifactId>
-            <version>3.6.2</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.codehaus.plexus</groupId>
-            <artifactId>plexus-utils</artifactId>
-            <version>3.4.1</version>
-        </dependency>
-        <!-- Logging and tests -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
-            <scope>test</scope>
-        </dependency>
-
-
-
-        <!-- Windup dependencies -->
-
-        <!-- This should be the addon which contains all the core Windup dependencies you need to run Windup. -->
-        <dependency>
-            <groupId>org.jboss.windup</groupId>
-            <artifactId>windup-tooling</artifactId>
-            <classifier>forge-addon</classifier>
-        </dependency>
-        <!-- But it isn't. The needed rest is referenced as deps in bootstrap. -->
-        <dependency>
-            <groupId>org.jboss.windup</groupId>
-            <artifactId>windup-bootstrap-windup</artifactId>
-        </dependency>
-
-        <!-- Rules and data -->
-        <dependency>
-            <groupId>org.jboss.windup.maven</groupId>
-            <artifactId>nexus-indexer-data</artifactId>
-            <type>zip</type>
-        </dependency>
-
-        <dependency>
-            <groupId>org.jboss.windup.rules</groupId>
-            <artifactId>windup-rulesets-windup</artifactId>
-            <version>${version.windup-rulesets}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.windup.rules.apps</groupId>
-            <artifactId>windup-rules-java-project</artifactId>
-            <classifier>forge-addon</classifier>
-        </dependency>
-
-        <dependency>
-            <groupId>org.jboss.windup.rules.apps</groupId>
-            <artifactId>windup-rules-tattletale</artifactId>
-            <classifier>forge-addon</classifier>
-            <scope>provided</scope> <!-- Only needs a constant. -->
-        </dependency>
-
-
-
-        <!-- Furnace -->
-        <dependency>
-            <groupId>org.jboss.forge.furnace</groupId>
-            <artifactId>furnace-se</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.forge.furnace</groupId>
-            <artifactId>furnace-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.forge.furnace.container</groupId>
-            <!-- Windup switched from :cdi to :simple due to problems with Titan classloading. -->
-            <artifactId>simple</artifactId>
-            <classifier>forge-addon</classifier>
-        </dependency>
-
-        <!-- Forge -->
-        <dependency>
-            <groupId>org.jboss.forge.addon</groupId>
-            <artifactId>core</artifactId>
-            <classifier>forge-addon</classifier>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.maven.plugin-testing</groupId>
-            <artifactId>maven-plugin-testing-harness</artifactId>
-            <version>3.3.0</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.eclipse.platform</groupId>
-            <artifactId>org.eclipse.core.resources</artifactId>
-            <version>3.13.200</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.platform</groupId>
-            <artifactId>org.eclipse.text</artifactId>
-            <version>3.8.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.platform</groupId>
-            <artifactId>org.eclipse.equinox.common</artifactId>
-            <version>3.14.100</version>
-            <scope>provided</scope>
-        </dependency>
-    </dependencies>
-
-    <build>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <filtering>true</filtering>
-            </resource>
-        </resources>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-plugin-plugin</artifactId>
-                <version>3.6.0</version>
-                <configuration>
-                    <goalPrefix>windup</goalPrefix>
-                    <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>mojo-descriptor</id>
-                        <goals>
-                            <goal>descriptor</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+    <modules>
+        <module>base-plugin</module>
+    </modules>
 
     <profiles>
         <profile>
-            <id>run-integration-test</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-invoker-plugin</artifactId>
-                        <version>1.10</version>
-                        <configuration>
-                            <debug>true</debug>
-                            <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
-                            <pomIncludes>
-                                <pomInclude>*/pom.xml</pomInclude>
-                            </pomIncludes>
-                            <postBuildHookScript>verify</postBuildHookScript>
-                            <localRepositoryPath>${project.build.directory}/local-repo</localRepositoryPath>
-                            <settingsFile>src/it/settings.xml</settingsFile>
-                            <goals>
-                                <goal>clean</goal>
-                                <goal>test-compile</goal>
-                            </goals>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>integration-test</id>
-                                <goals>
-                                    <goal>install</goal>
-                                    <goal>integration-test</goal>
-                                    <goal>verify</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
+            <id>windup</id>
+            <activation>
+                <property>
+                    <name>!skipThemeWindup</name>
+                </property>
+            </activation>
+            <modules>
+                <module>windup-plugin</module>
+            </modules>
         </profile>
         <profile>
-            <id>java9+</id>
-            <activation>
-                <jdk>[9,)</jdk>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <argLine>--add-modules=java.se</argLine>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
+            <id>mtr</id>
+            <modules>
+                <module>mtr-plugin</module>
+            </modules>
+        </profile>
+        <profile>
+            <id>mta</id>
+            <modules>
+                <module>mta-plugin</module>
+            </modules>
         </profile>
     </profiles>
 </project>
